--- a/PanArctic_DSL_CTD.Rmd
+++ b/PanArctic_DSL_CTD.Rmd
@@ -112,7 +112,7 @@ plot_grid(CTD_grid_latlon %>% # Map conservative temperature
 More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/).
 
 ```{r EPSG-6931-CTD-grid}
-cell_res <- 100 # Cell resolution in km
+cell_res <- 150 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -148,6 +148,9 @@ for (i in seq(2015, 2017, 1)) { # Data gridding
     dplyr::select(year, area, lat, lon, xc, yc, cons_temp, abs_sal)
   CTD_grid_laea <- bind_rows(CTD_grid_laea, CTD_tmp_laea)
 }
+CTD_grid_laea <- CTD_grid_laea %>%
+  mutate(cell_res = cell_res) # Add cell resolution to dataframe
+
 rm(CTD_tmp, CTD_tmp_laea, i, cell_res) # Remove temporary data
 ```
 
