--- a/PanArctic_DSL_analyses.Rmd
+++ b/PanArctic_DSL_analyses.Rmd
@@ -22,6 +22,7 @@ library(ggforce)                # Draw polygons
 library(cmocean)                # Pretty color palettes
 library(ggpubr)                 # Display stats with ggplot
 library(RColorBrewer)           # Diverging color palette
+library(ggnewscale)             # Multiple color scales on a single plot
 source("R/getNOAA.ice.bathy.R") # Load bathy data from NOAA
 # Custom figure theme
 theme_set(theme_bw())
@@ -188,7 +189,7 @@ rm(cell_res)
 
 Careful this map takes forever to compute (> 18 h) when bathy has to be drawn.
 
-```{r fig1-map-station-original, fig.align='center', fig.height=3.25, fig.width=6, dpi=600}
+```{r fig1-map-station-original, fig.align='center', fig.height=3.25, fig.width=6}
 MVBS %>%
   mutate(lat = round(lat, 1),
          lon = round(lon, 1)) %>%
@@ -222,16 +223,16 @@ MVBS %>%
 
 To overcome that, I project the bathy data on the EASE-Grid 2.0 North, prior to plotting. This results in a much quicker plotting time.
 
-```{r fig1-map-station-laea, fig.align='center', fig.height=3.25, fig.width=6, dpi=600}
+```{r fig1-map-station-laea, fig.align='center', fig.height=3.25, fig.width=6}
 # Bathymetric map of the Arctic with location of acoustic and trawl
 MVBS_laea %>%
   ggplot(aes(x = xc, y = yc)) +
   # Plot bathy
   geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d)) +
-  scale_fill_cmocean("Depth (m)", name = "deep", discrete = T, na.value = NA, alpha = 0.7) +
+  scale_fill_cmocean("Depth (m)", name = "deep", discrete = T, na.value = NA, alpha = 0.6) +
   # Plot coastlines
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  # # Arctic circle
+  # Arctic circle
   geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), col = "grey40", lty = 2, size = 0.3) +
   # Areas of interest
   geom_shape(data = area_BF_CAA_laea, aes(x = xc, y = yc), fill = NA, col = "black", lwd = 0.2, lty = 1, radius = unit(0.05, "in")) +
@@ -251,7 +252,7 @@ MVBS_laea %>%
 
 Code that works and used for producing the plot in the manuscript from 2021_12_17
 
-```{r fig2-Sv-profile-area-year, fig.align='center', dpi=100, fig.width=6.5, fig.height=3, dpi=600}
+```{r fig2-Sv-profile-area-year, fig.align='center', dpi=100, fig.width=6.5, fig.height=3}
 # Custom color palette
 col_pal <- c("#80CBB1", "#347BA5", "#302346")
 # Calculate mean and median vertical profile for each area
@@ -308,7 +309,7 @@ Sv_raster %>%
 
 I'm trying to streamline the code.
 
-```{r Sv-profiles-area-year-in-progress, eval=FALSE, fig.align='center', fig.width=6.5, fig.height=3, dpi=600}
+```{r Sv-profiles-area-year-in-progress, eval=FALSE, fig.align='center', fig.width=6.5, fig.height=3}
 col_pal <- c("#80CBB1", "#347BA5", "#302346") # Custom colour palette
 Sv_area_year <- Sv_raster %>%
   group_by(depth, area, year) %>%
@@ -369,7 +370,7 @@ Sv_area_year
 
 ## Figure 3. Map of mesopelagic backscatter hotspots
 
-```{r fig3-map-sa-anomalies, fig.align='center', fig.height=3.25, fig.width=6, dpi=600}
+```{r fig3-map-sa-anomalies, fig.align='center', fig.height=3.25, fig.width=6}
 col_pal <- c("#80cdc1",  "#f5f5f5", "#dfc27d", "#a6611a")
 # Calculate mean sa anomaly over three years of data per area
 map_sa_anomaly <- SA_anomaly_2deg %>%
@@ -408,11 +409,11 @@ map_sa_anomaly <- SA_anomaly_2deg %>%
   # Plot 500m isobath
   geom_contour(data = bathy_df, aes(x = lon, y = lat, z = depth), breaks = -500, size = 0.25, colour = "black", lty = 3) +
   # Plot coastlines
-  geom_polygon(data = coastlines_10m, aes(x = lon, y = lat, group = group), fill = "grey70") +
+  geom_polygon(data = coast_10m_latlon, aes(x = lon, y = lat, group = group), fill = "grey70") +
   # Areas of interest
-  geom_shape(data = area_BF_CAA_2, aes(x = x,y = y), fill = NA, col = "black", lwd = 0.2, lty = 1) +
-  geom_shape(data = area_BB_2, aes(x = x,y = y), fill = NA, col = "black", lwd = 0.2, lty = 1) +
-  geom_shape(data = area_SV_2, aes(x = x,y = y), fill = NA, col = "black", lwd = 0.2, lty = 1) +
+  geom_shape(data = area_BF_CAA_latlon, aes(x = lon, y = lat), fill = NA, col = "black", lwd = 0.2, lty = 1) +
+  geom_shape(data = area_BB_latlon, aes(x = lon, y = lat), fill = NA, col = "black", lwd = 0.2, lty = 1) +
+  geom_shape(data = area_SV_latlon, aes(x = lon, y = lat), fill = NA, col = "black", lwd = 0.2, lty = 1) +
   # Arctic circle
   geom_segment(aes(x = -180, xend = 100, y = 66.5, yend = 66.5), col = "#666766", lty = 2, size = 0.3) +
   # Plot data
@@ -432,94 +433,28 @@ map_sa_anomaly <- SA_anomaly_2deg %>%
 map_sa_anomaly
 ```
 
-```{r fig3-map-sa-anomalies-laea, fig.align='center', fig.height=3.25, fig.width=6, dpi=600}
-# Map integrated normalized backscatter anomaly
+```{r fig3-map-sa-anomalies-laea, fig.align='center', fig.height=4, fig.width=10}
 SA_grid_laea %>% 
   ggplot() +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(x = xc, y = yc, fill = NASC_anomaly_d), color = "grey30", alpha = 0.8, size = 0.15) +
-  scale_fill_manual("EPSG:6931 - Normalized sA anomaly",
-                    values = rev(brewer.pal(n = 5, name = "BrBG"))) +
+  # Plot bathy
+  geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d)) +
+  # scale_fill_grey(start = 0.8, end = 0.2, alpha = 0.6) +
+  scale_fill_cmocean("Depth (m)", name = "deep", discrete = T, na.value = NA, alpha = 0.5) +
+  guides(fill = "none") + # Remove legend
+  new_scale_fill() +
+  # Plot backscatter anomalies
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey70") +
+  geom_tile(aes(x = xc, y = yc, fill = NASC_anomaly_d), color = "grey30", size = 0.15) +
+  scale_fill_manual("Normalized sA anomaly", values = rev(brewer.pal(n = 5, name = "BrBG"))) +
   facet_wrap(~ year, ncol = 3) +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  guides(fill = guide_legend(keywidth = 0.05,
-                             keyheight = 0.1,
-                             default.unit = "in",
-                             label.position = "bottom"),
-         color = "none") +
-  theme(legend.position = "top", axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
-
-## Figure 4. Environmental drivers of mesopelagic backscatter
-
-I selected acoustic data within 1 hour of a CTD cast and calculated the mean mesopelagic NASC (between 200 and 1000 m depth) and mean mesopelagic temperature and salinity.
-
-```{r MVBS-CTD-data-manip, include=T}
-# Prepare CTD data
-CTD <- CTD_2015_2019 %>% 
-  filter(between(year, 2015, 2017) & CTD_depth_max > 350) %>%
-  filter(between(depth, 200, 1000)) %>% 
-  dplyr::select(date, cast, lat, lon, CT, SA) %>%
-  group_by(date, cast, lat, lon) %>%
-  summarise(CT = mean(CT), # Calculate average temp and sal at mesopelagic depths
-            SA = mean(SA)) %>%
-  mutate(date = floor_date(date, "10 min"),
-         date_CTD_cast = date) %>%
-  ungroup() %>%
-  mutate(area = factor(case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
-                                 lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
-                                 lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
-                       levels = c("BF_CAA", "BB", "SV")),
-         date_min = date - hours(1),
-         date_max = date + hours(1)) %>% 
-  group_by(cast, date_CTD_cast, date_min, date_max,  area, lat, lon, CT, SA) %>%
-  # Expand dataset to +- 1 h around each CTD cast with mean values of the cast. Used for combining with acoustic data
-  complete(date = seq(date_min, date_max, by = "10 min"))
-# Prepare acoustic data
-MVBS_CTD <- MVBS %>%
-  filter(between(layer_depth_min, 200, 1000)) %>%
-  dplyr::select(date, lat, lon, NASC) %>%
-  group_by(date, lat, lon) %>%
-  summarise(NASC_int = sum(NASC)) %>%
-  mutate(area = factor(case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
-                                 lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
-                                 lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
-                       levels = c("BF_CAA", "BB", "SV"))) %>%
-  left_join(., CTD, by = c("date", "area"), suffix = c("_MVBS", "_CTD")) %>% # Combine CTD and acoustic datasets
-  mutate(lat_diff = abs(lat_MVBS - lat_CTD),
-         lon_diff = abs(lon_MVBS - lon_CTD),
-         date_diff = abs(difftime(date, date_CTD_cast, tz = "UTC", units = "mins"))) %>%
-  filter(lat_diff < 0.1 & lon_diff < 0.1 & date_diff <= minutes(60)) %>% # Remove NASC cells too far in space or time to CTD casts
-  group_by(date_CTD_cast, area, cast, lat_CTD, lon_CTD, CT, SA) %>%
-  summarise(NASC_int = mean(NASC_int)) %>% # Calculate mean mesopelagic NASC for each CTD cast
-  ungroup() %>%
-  mutate(SA_int = 10 * log10(NASC_int))
-```
-
-```{r SA-temp-sal, fig.align='center', fig.width=6, fig.height=3, dpi=600}
-temp_SA_int <- MVBS_CTD %>%
-  ggplot(aes(x = CT, y = SA_int)) +
-  geom_point(size = 1.2, alpha = 0.5) + 
-  geom_smooth(method = "lm") +
-  stat_cor(label.x = 1, label.y = 50) +
-  stat_regline_equation(label.x = 1, label.y = 45) +
-  scale_x_continuous("Conservative temperature (°C)") +
-  scale_y_continuous(expression("S"[A]*" dB re 1 (m"^2*" nmi"^-2*")"))
-sal_SA_int <- MVBS_CTD %>% # Plot salinity 
-  ggplot(aes(x = SA, y = SA_int)) +
-  geom_point(size = 1.2, alpha = 0.5) + 
-  geom_smooth(method = "lm") +
-  stat_cor(label.x = 34, label.y = 50) +
-  stat_regline_equation(label.x = 34, label.y = 45) +
-  scale_x_continuous(expression("Absolute salinity (g kg"^-1*")")) +
-  scale_y_continuous(expression("S"[A]*" dB re 1 (m"^2*" nmi"^-2*")"))
-plot_grid(temp_SA_int, sal_SA_int, axis = "tblr", align = "hv") # Combine plots
+  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) +
+  guides(fill = guide_legend(keywidth = 0.2, keyheight = 0.2, default.unit = "in"), color = "none") +
+  theme(legend.position = "right", axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
 ## Table 1. Abundance mesopelagic fish
 
-```{r table1-heatmap-abundance, fig.align='center', fig.width=4.5, fig.height=3.25, dpi=600}
+```{r table1-heatmap-abundance, fig.align='center', fig.width=4.5, fig.height=3.25}
 relative_abundance_area <- trawl_station %>%
   group_by(area) %>%
   summarise(total_fish = sum(number_fish)) %>% # Calculate total number of fish caught per area
