--- a/PanArctic_DSL_acoustics.Rmd
+++ b/PanArctic_DSL_acoustics.Rmd
@@ -39,7 +39,7 @@ Acoustic data were collected continuously at 38 kHz. We selected data when the s
 load("data/acoustics/MVBS_2015_2017.RData") # Acoustic data
 ```
 
-## EPSG:4326 - WGS84 projection 
+## 2D Integrated backscatter - EPSG:4326 - WGS84 projection 
 
 ```{r EPSG-4326-acoustic-grid}
 arctic_latlon <- raster(extent(-155, 35, 66, 85), # Base projection for acoustic and CTD data
@@ -133,7 +133,7 @@ plot_grid(SA_grid_latlon %>% # Map integrated normalized backscatter anomaly
           ncol = 2, align = "hv", axis = "tblr")
 ```
 
-## EPSG:6931 - EASE-Grid 2.0 North (Lambert's equal-area, azimuthal)
+## 2D Integrated backscatter - EPSG:6931 - EASE-Grid 2.0 North (Lambert's equal-area, azimuthal)
 
 More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/).
 
@@ -225,8 +225,173 @@ plot_grid(SA_grid_laea %>% # Map integrated normalized backscatter anomaly
           ncol = 1, align = "hv", axis = "tblr")
 ```
 
+## 3D S~V~ profiles - EPSG:6931 - EASE-Grid 2.0 North (Lambert's equal-area, azimuthal)
+
+More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/).
+
+```{r 3D-EPSG-6931-acoustic-grid}
+cell_res <- 25 # Cell resolution in km
+arctic_sv_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
+projection(arctic_sv_laea) <- gsub("units=m", "units=km", projection(arctic_sv_laea)) # Convert proj unit from m to km
+res(arctic_sv_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
+
+Sv_grid_laea <- data.frame() # Empty dataframe that will be filled with gridded CTD data
+
+for (i in seq(2015, 2017, 1)) { # Loop through every year
+  for (j in seq(20, 995,5)) { # Loop through each depth bin
+    Sv_tmp <- MVBS %>%
+      dplyr::select(year, lat, lon, day_night, layer_depth_min, Sv_mean) %>%
+      filter(year == i & day_night == "day" & layer_depth_min == j) %>%
+      mutate(sv_lin = 10^(Sv_mean/10)) # Transform into backscattering coefficient (lin)
+    # Calculate 5th quantile
+    Sv_tmp_0.05 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
+                                                        proj4string = CRS("EPSG:4326")),
+                                          data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
+      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.05)}, na.rm = F) %>% 
+      dropLayer(1) %>% # Remove ID layer
+      rasterToPoints() %>% # Convert raster to data frame
+      as.data.frame() %>%
+      rename(xc = x, yc = y, sv_lin_q0.05 = sv_lin) %>% # Rename variables
+      mutate(year = i, depth = j)
+    # Calculate 25th quantile
+    Sv_tmp_0.25 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
+                                                        proj4string = CRS("EPSG:4326")),
+                                          data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
+      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.25)}, na.rm = F) %>% 
+      dropLayer(1) %>% # Remove ID layer
+      rasterToPoints() %>% # Convert raster to data frame
+      as.data.frame() %>%
+      rename(xc = x, yc = y, sv_lin_q0.25 = sv_lin) %>% # Rename variables
+      mutate(year = i, depth = j)
+    # Calculate median
+    Sv_tmp_0.50 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
+                                                       proj4string = CRS("EPSG:4326")),
+                                         data.frame(lat = Sv_tmp$lat,
+                                                    lon = Sv_tmp$lon,
+                                                    sv_lin = Sv_tmp$sv_lin)) %>%
+      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.5)}, na.rm = F) %>% 
+      dropLayer(1) %>% # Remove ID layer
+      rasterToPoints() %>% # Convert raster to data frame
+      as.data.frame() %>%
+      rename(xc = x, yc = y, sv_lin_q0.50 = sv_lin) %>% # Rename variables
+      mutate(year = i, depth = j)
+    # Calculate 75th quantile
+    Sv_tmp_0.75 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
+                                                        proj4string = CRS("EPSG:4326")),
+                                          data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
+      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.75)}, na.rm = F) %>% 
+      dropLayer(1) %>% # Remove ID layer
+      rasterToPoints() %>% # Convert raster to data frame
+      as.data.frame() %>%
+      rename(xc = x, yc = y, sv_lin_q0.75 = sv_lin) %>% # Rename variables
+      mutate(year = i, depth = j)
+    # Calculate 95th quantile
+    Sv_tmp_0.95 <- SpatialPointsDataFrame(SpatialPoints(cbind(Sv_tmp$lon, Sv_tmp$lat), 
+                                                        proj4string = CRS("EPSG:4326")),
+                                          data.frame(sv_lin = Sv_tmp$sv_lin)) %>%
+      spTransform(., CRSobj = crs(arctic_sv_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_sv_laea, fun = function(x, ...) {quantile(unique(na.omit(x)), 0.95)}, na.rm = F) %>% 
+      dropLayer(1) %>% # Remove ID layer
+      rasterToPoints() %>% # Convert raster to data frame
+      as.data.frame() %>%
+      rename(xc = x, yc = y, sv_lin_q0.95 = sv_lin) %>% # Rename variables
+      mutate(year = i, depth = j)
+    # Append quantiles to dataframe
+    Sv_grid_tmp <- left_join(Sv_tmp_0.50, Sv_tmp_0.05, by = c("year", "xc", "yc", "depth")) %>% 
+      left_join(., Sv_tmp_0.25, by = c("year", "xc", "yc", "depth")) %>% 
+      left_join(., Sv_tmp_0.75, by = c("year", "xc", "yc", "depth")) %>% 
+      left_join(., Sv_tmp_0.95, by = c("year", "xc", "yc", "depth")) 
+    Sv_grid_laea <- bind_rows(Sv_grid_laea, Sv_grid_tmp) # Combine data
+  }
+}
+
+Sv_grid_laea <- Sv_grid_laea %>% # Tidy data
+    mutate(Sv_q0.05 = 10 * log10(sv_lin_q0.05), # Transform into backsattering strengh (log)
+           Sv_q0.25 = 10 * log10(sv_lin_q0.25),
+           Sv_q0.50 = 10 * log10(sv_lin_q0.50), 
+           Sv_q0.75 = 10 * log10(sv_lin_q0.75),
+           Sv_q0.95 = 10 * log10(sv_lin_q0.95),
+           area = factor(case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
+                                   lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
+                                   lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
+                         levels = c("BF_CAA", "BB", "SV")),
+           cell_res = cell_res) %>%
+  # unite(grid_ID, xc, yc, year, sep = "_", remove = F) %>% # Create unique ID for each grid cell
+  dplyr::select(year, area, xc, yc, lon, lat, depth, cell_res,
+                sv_lin_q0.05, sv_lin_q0.25, sv_lin_q0.50, sv_lin_q0.75, sv_lin_q0.95,
+                Sv_q0.05, Sv_q0.25, Sv_q0.50, Sv_q0.75, Sv_q0.95)
+  
+rm(Sv_tmp, Sv_tmp_0.05, Sv_tmp_0.25, Sv_tmp_0.5, Sv_tmp_0.75, Sv_tmp_0.95, Sv_grid_tmp, cell_res) # Remove temporary data
+```
+
+Plot S~V~ profiles for each area and year after data gridding.
+
+```{r 3D-EPSG-6931-Sv-profiles, message=FALSE, fig.width=6.5, fig.height=3}
+col_pal <- c("#80CBB1", "#347BA5", "#302346") # Custom color palette
+
+Sv_grid_laea %>% # Plot median profiles
+  group_by(depth, area, year) %>% # Calculate mean and median Sv profiles per area per year
+  summarise(sv_lin_q0.05_areayear = median(sv_lin_q0.05),
+            sv_lin_q0.25_areayear = median(sv_lin_q0.25),
+            sv_lin_q0.50_areayear = median(sv_lin_q0.50),
+            sv_lin_q0.75_areayear = median(sv_lin_q0.75),
+            sv_lin_q0.95_areayear = median(sv_lin_q0.95)) %>%
+  mutate(Sv_q0.05_median = 10 * log10(sv_lin_q0.05_areayear), 
+         Sv_q0.25_median = 10 * log10(sv_lin_q0.25_areayear),
+         Sv_q0.50_median = 10 * log10(sv_lin_q0.50_areayear),
+         Sv_q0.25_median = 10 * log10(sv_lin_q0.25_areayear),
+         Sv_q0.75_median = 10 * log10(sv_lin_q0.75_areayear),
+         Sv_q0.95_median = 10 * log10(sv_lin_q0.95_areayear)) %>%
+  ungroup() %>%
+  # Plotting details for allowing geom_ribbon to work
+  mutate(Sv_q0.05_median = case_when(Sv_q0.05_median == -999 ~ NaN,
+                                     Sv_q0.05_median > -999 & Sv_q0.05_median <= -105 ~ -105,
+                                     Sv_q0.05_median > -105 ~ Sv_q0.05_median),
+         Sv_q0.25_median = case_when(Sv_q0.25_median == -999 ~ NaN,
+                                     Sv_q0.25_median > -999 & Sv_q0.25_median <= -105 ~ -105,
+                                     Sv_q0.25_median > -105 ~ Sv_q0.25_median),
+         Sv_q0.50_median = case_when(Sv_q0.50_median == -999 ~ NaN,
+                                     Sv_q0.50_median > -999 & Sv_q0.50_median <= -105 ~ -105,
+                                     Sv_q0.50_median > -105 ~ Sv_q0.50_median),
+         Sv_q0.75_median = case_when(Sv_q0.75_median == -999 ~ NaN,
+                                     Sv_q0.75_median > -999 & Sv_q0.75_median <= -105 ~ -105,
+                                     Sv_q0.75_median > -105 ~ Sv_q0.75_median),
+         Sv_q0.95_median = case_when(Sv_q0.95_median == -999 ~ NaN,
+                                     Sv_q0.95_median > -999 & Sv_q0.95_median <= -105 ~ -105,
+                                     Sv_q0.95_median > -105 ~ Sv_q0.95_median)) %>%
+  arrange(year, area, depth) %>%
+  mutate(area=factor(if_else(area=="BF_CAA", "Beaufort Sea &\nCan. Arctic Archipelago",
+                       if_else(area=="BB", "Baffin Bay",
+                       if_else(area=="SV", "Svalbard","Other"))),
+                       levels=c("Beaufort Sea &\nCan. Arctic Archipelago","Baffin Bay","Svalbard"))) %>%
+  # Plot
+  ggplot() +
+  geom_vline(xintercept = 200, lty = 2, col = "grey20") +
+  geom_ribbon(aes(x = depth, ymin = Sv_q0.05_median, ymax = Sv_q0.95_median, fill = as.factor(year), group = year),
+              alpha = 0.2, na.rm = T) +
+  geom_line(aes(x = depth, y = Sv_q0.50_median, col = as.factor(year), group = year), na.rm = T) +
+  scale_x_reverse("Depth (m)", breaks = seq(0, 1000, 200)) +
+  geom_hline(yintercept = -105, col = "white") +
+  scale_y_continuous(expression("S"[V]*" (dB re 1 m"^-1*")"), breaks = seq(-200, 0, 10), expand = c(0, 0)) +
+  scale_color_manual(values = col_pal) +
+  scale_fill_manual(values = col_pal) +
+  coord_flip(ylim = c(-105, -65)) +
+  facet_grid(~ area) +
+  theme(legend.title = element_blank(),
+        legend.position = c(0.94, 0.275),
+        legend.background = element_blank(),
+        legend.key = element_blank(), 
+        panel.border = element_blank(),
+        axis.line = element_line())
+```
+
 # Save data 
 
 ```{r save-data}
 save(SA_grid_laea, SA_grid_latlon, file = "data/acoustics/SA_grids.RData") # Save data
+save(Sv_grid_laea, file = "data/acoustics/Sv_grids.RData") # Save data
 ```
